issue-5 fix statute/section alignment

--- a/src/pages/section/section.scss
+++ b/src/pages/section/section.scss
@@ -7,7 +7,6 @@ page-section {
     }
     ion-content {
         ion-col {
-            text-align: center;
             font-weight: normal;
         }
         ion-col.section_text {
