--- a/src/pages/statue/statue.scss
+++ b/src/pages/statue/statue.scss
@@ -6,6 +6,9 @@ page-statue {
     color: white;
   }
   ion-content {
+    #statue-markdown {
+      text-align: left;
+    }
     ion-col {
       text-align: center;
       font-weight: normal;
